<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createNoteLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#88000000"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@android:color/white"
        android:elevation="6dp"
        android:layout_margin="24dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end|center">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_note_header_title"
                        android:textAlignment="viewStart"
                        android:textSize="30sp"
                        android:textColor="@android:color/black"
                        android:padding="8dp" />
                    <TextView
                        android:id="@+id/createNoteClose"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_note_close"
                        android:textAlignment="center"
                        android:textSize="40sp"
                        android:textColor="@android:color/black"
                        android:padding="8dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/noteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textColorHint="#888888"
                    android:textColor="@color/black"
                    android:hint="@string/title_required_create_note"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="22sp"
                    />

                <EditText
                    android:id="@+id/noteDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textColorHint="#888888"
                    android:textColor="@color/black"
                    android:hint="@string/description_optional_create_note"
                    android:inputType="textMultiLine"
                    android:singleLine="true"
                    android:layout_marginTop="0dp"
                    android:textSize="22sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createNoteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_button_create_note"
                    android:layout_marginTop="16dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>