<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notePreviewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!-- Title (1 línea, scroll horizontal si se pasa) -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <TextView
            android:id="@+id/previewNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="26sp"
            android:layout_marginHorizontal="20dp"
            android:paddingEnd="30dp"
            android:paddingStart="0dp"
            android:textStyle="bold"
            android:text="@string/preview_note_note_title" />
    </HorizontalScrollView>

    <!-- Description (1 línea, scroll horizontal si se pasa) -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <TextView
            android:id="@+id/previewNoteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="14sp"
            android:text="@string/preview_note_note_description"
            android:paddingEnd="30dp"
            android:paddingStart="0dp"
            android:layout_marginHorizontal="20dp" />
    </HorizontalScrollView>

    <!-- El cuerpo grande con scroll horizontal + vertical -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:fontFamily="sans-serif"
                android:id="@+id/previewNoteBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:lineSpacingExtra="6dp"
                android:text="@string/preview_note_note_body"
                android:padding="20dp"
                android:scrollbars="horizontal|vertical" />
        </ScrollView>
    </HorizontalScrollView>

    <!-- Botón al final -->
    <Button
        android:id="@+id/editNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_preview_edit_button" />
</LinearLayout>
